--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
     "require": {
         "slim/slim": "^3.11",
         "slim/php-view": "^2.2",
-        "fzaninotto/faker": "^1.8"
+        "fzaninotto/faker": "^1.8",
+        "danielstjules/stringy": "^3.1",
+        "tightenco/collect": "^5.7"
     },
     "autoload": {
         "psr-4": {"App\\": "src/"},
