--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "slim/php-view": "^2.2",
         "fzaninotto/faker": "^1.8",
         "danielstjules/stringy": "^3.1",
-        "tightenco/collect": "^5.7"
+        "tightenco/collect": "^5.7",
+        "slim/flash": "^0.4.0"
     },
     "autoload": {
         "psr-4": {"App\\": "src/"},
